--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
     "bcrypt": "^5.1.1",
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.5.4",
-    "next": "14.2.5",
+    "next": "^15.0.3",
     "react": "^18",
     "react-dom": "^18"
   },
