--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "axios": "^1.7.5",
     "bcrypt": "^5.1.1",
     "jsonwebtoken": "^9.0.2",
+    "lucide-react": "^0.460.0",
     "mongoose": "^8.5.4",
     "next": "^15.0.3",
     "react": "^18",
