--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,8 +1,23 @@
 {
-  "extends": "next/core-web-vitals",
-  "jsx-quotes": ["error", "prefer-double"],
-  "react/jsx-curly-brace-presence": [
-    "error",
-    { "props": "ignore", "children": "ignore" }
-  ]
+  "env": {
+    "browser": true,
+    "es2021": true,
+    "node": true
+  },
+  "extends": [
+    "eslint:recommended",
+    "plugin:react/recommended",
+    "next/core-web-vitals"
+  ],
+  "parserOptions": {
+    "ecmaFeatures": {
+      "jsx": true
+    },
+    "ecmaVersion": 12,
+    "sourceType": "module"
+  },
+  "plugins": ["react"],
+  "rules": {
+    "jsx-quotes": ["error", "prefer-double"]
+  }
 }
