--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -18,6 +18,7 @@
   },
   "plugins": ["react"],
   "rules": {
-    "jsx-quotes": ["error", "prefer-double"]
+    "jsx-quotes": ["error", "prefer-double"],
+    "react/react-in-jsx-scope": "off"
   }
 }
